--- a/Client/Pages/Test/MarkTest.razor
+++ b/Client/Pages/Test/MarkTest.razor
@@ -2,37 +2,48 @@
 @attribute [Authorize(Roles = "Administrators, Teachers")]
 @inject NavigationManager Navigation
 @inject HttpClient Http
-<h3>Edit Employee</h3>
+<h3>Mark Test</h3>
 
 <h4>Create a test</h4>
 <br />
+
 <EditForm Model="Exam" OnValidSubmit="@HandleValidSubmit">
     <DataAnnotationsValidator />
-
     <div class="form-check group">
-        <label class="control-label">Exam name</label>
-        <InputText @bind-Value="@Exam.ExamName" class="form-control" />
-        <ValidationMessage For="@(() => Exam.ExamName)" />
-    </div>
-    <br />
-    <div class="form-check group">
+        <label class="control-label">@Exam.ExamName</label>
+        <br />
         <label class="control-label">Exam code: @Exam.ExamCode</label>
+@*        <br />
+        <label class="control-label">Exam taker: @person.FirstName</label>*@
     </div>
     <br />
-    @foreach (var ans in answerList)
+    @foreach (var ans in answerList2)
     {
+        @foreach(var q in questionList)
+        {
+            if(q.QuestionId == ans.QuestionId)
+            {
+                question = q;
+            }
+        }
 
         <div class="form-check group">
-            <label class="control-label">Question</label>
-            <InputText @bind-Value="@quest.Text" class="form-control" />
-            <ValidationMessage For="@(() => quest.Text)" />
+            <label class="control-label float-left">Question - @question.Text</label>
+            <label class="control-label float-left" >Mark - @question.Mark</label>
+            <br />
             <br />
             <label class="control-label">Answer</label>
-            <label class="control-label">Input Type:</label>
+            <label class="control-label">@ans.Text</label>
             <br />
-            <br />
+
             <label class="control-label">Mark</label>
-            <InputNumber @bind-Value="@quest.Mark" class="form-control" />
+            <InputNumber @bind-Value="@ans.Mark" class="form-control" />
+            <ValidationMessage For="(() => ans.Mark)"/>
+            <br />
+
+            <label class="control-label">Comment</label>
+            <InputText @bind-Value="@ans.Comment" class="form-control" />
+            <ValidationMessage For="(() => ans.Comment)"/>
             <br />
         </div>
         <br />
@@ -47,10 +58,15 @@
 </EditForm>
 
 @code {
-    private Exam Exam = new Exam();
+    public Exam Exam = new Exam();
+    public Question question;
+    public Person person;
     private StudentExam StudentExam = new StudentExam();
     private List<Question> questionList = new List<Question>();
+    private List<Question> questionList2 = new List<Question>();
     private List<Answer> answerList = new List<Answer>();
+    private List<Answer> answerList2 = new List<Answer>();
+    private int count;
     [Parameter] public Guid Id { get; set; }
 
 
@@ -60,32 +76,18 @@
         {
             StudentExam = await Http.GetFromJsonAsync<StudentExam>($"/api/StudentExams/{Id}");
             questionList = await Http.GetFromJsonAsync<List<Question>>("/api/Questions");
+            person = await Http.GetFromJsonAsync<Person>($"/api/People/{StudentExam.StudentId}");
+            Exam = await Http.GetFromJsonAsync<Exam>($"/api/Exams/{StudentExam.ExamId}");
             answerList = await Http.GetFromJsonAsync<List<Answer>>("/api/Answers");
 
-            foreach (var quest in questionList)
-            {
-                //checking if questions are in exam
-                if (quest.ExamId != StudentExam.ExamId)
-                {
-                    questionList.Remove(quest);
-                }
-            }
-
             foreach (var ans in answerList)
-                {
-                //matching answer to correct question and student
-                    if (ans.StudentId == StudentExam.StudentId)
-                    {
-                    foreach(var quest in questionList)
-                        {
-                            if (quest.QuestionId != ans.QuestionId)
-                            {
-                             answerList.Remove(ans);
-                            }
-                        }
+            {
+                //checks
+                if (ans.StudentExamId == StudentExam.SEId)
+                    { 
+                        answerList2.Add(ans);
                     }
-                }
-
+            }
 
         }
         catch (AccessTokenNotAvailableException exception)
@@ -94,7 +96,7 @@
         }
         catch (Exception e)
         {
-
+            Console.WriteLine("EXCEPTION EXCEPTION EXCEPTION EXCEPTION EXCEPTION");
         }
     }
 
@@ -103,21 +105,27 @@
     {
         try
         {
-            Exam.QuestionAmount = questionList.Count();
+            foreach(var ans in answerList)
+            {
+                count += ans.Mark;
+            }
+
+            StudentExam.Mark = count;
+            StudentExam.Status = true;
             //stuff everything into exam and then post it
-            var response = await Http.PutAsJsonAsync($"/api/Exams/{Exam.ExamId}", Exam);
+            var response = await Http.PutAsJsonAsync($"/api/StudentExams/{StudentExam.ExamId}", StudentExam);
             response.EnsureSuccessStatusCode();
             var content = await response.Content.ReadAsStringAsync();
             var project = JsonConvert.DeserializeObject<Exam>(content);
-            foreach (var quest in questionList)
+            foreach (var ans in answerList)
             {
-                var response1 = await Http.PutAsJsonAsync($"/api/Questions/{quest.QuestionId}", quest);
+                var response1 = await Http.PutAsJsonAsync($"/api/Answers/{ans.AnswerId}", ans);
                 response1.EnsureSuccessStatusCode();
                 var content1 = await response1.Content.ReadAsStringAsync();
-                var project1 = JsonConvert.DeserializeObject<Question>(content1);
+                var project1 = JsonConvert.DeserializeObject<Answer>(content1);
 
             }
-            Navigation.NavigateTo("test/viewtest");
+            Navigation.NavigateTo("/");
         }
         catch (AccessTokenNotAvailableException exception)
         {
