--- a/Client/Pages/Test/EditTest.razor
+++ b/Client/Pages/Test/EditTest.razor
@@ -2,9 +2,7 @@
 @attribute [Authorize(Roles = "Administrators, Teachers")]
 @inject NavigationManager Navigation
 @inject HttpClient Http
-<h3>Edit Employee</h3>
-
-<h4>Create a test</h4>
+<h3>Edit test</h3>
 <br />
 <EditForm Model="Exam" OnValidSubmit="@HandleValidSubmit">
     <DataAnnotationsValidator />
@@ -19,22 +17,13 @@
         <label class="control-label">Exam code: @Exam.ExamCode</label>
     </div>
     <br />
-    @foreach (var quest in questionList)
+    @foreach (var quest in questionList2)
     {
 
         <div class="form-check group">
             <label class="control-label">Question</label>
             <InputText @bind-Value="@quest.Text" class="form-control" />
             <ValidationMessage For="@(() => quest.Text)" />
-            <br />
-            <label class="control-label">Input Type:</label>
-            <InputSelect class="control-label" @bind-Value="@quest.Type">
-                <option>-------</option>
-                <option value="text">Text</option>
-                <option value="image">Image</option>
-            </InputSelect>
-            <ValidationMessage For="@(() => quest.Type)" />
-            <br />
             <br />
             <label class="control-label">Mark</label>
             <InputNumber @bind-Value="@quest.Mark" class="form-control" />
@@ -60,6 +49,7 @@
 @code {
     private Exam Exam = new Exam();
     private List<Question> questionList = new List<Question>();
+    private List<Question> questionList2 = new List<Question>();
     [Parameter] public Guid Id { get; set; }
 
 
@@ -69,11 +59,15 @@
         {
             Exam = await Http.GetFromJsonAsync<Exam>($"/api/Exams/{Id}");
             questionList = await Http.GetFromJsonAsync<List<Question>>("/api/Questions");
-            foreach (var quest in questionList)
+
+            foreach (Question quest in questionList)
             {
-                if (quest.ExamId != Exam.ExamId)
+                if (quest.ExamId.Equals(Exam.ExamId))
                 {
-                    questionList.Remove(quest);
+                    questionList2.Add(quest);
+                }
+                else
+                { 
                 }
             }
 
