--- a/Client/Pages/Test/InputQuestion.razor
+++ b/Client/Pages/Test/InputQuestion.razor
@@ -84,7 +84,7 @@
                 var project1 = JsonConvert.DeserializeObject<Question>(content1);*@
 
             }
-            Navigation.NavigateTo("/test/createtest");
+            Navigation.NavigateTo("/");
         }
         catch (AccessTokenNotAvailableException exception)
         {
