--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -12,31 +12,45 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
-        <AuthorizeView Roles="Administrators,Teachers">
+        <AuthorizeView Roles="Teachers">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="/test/viewtest">
                     <span class="oi oi-plus" aria-hidden="true"></span> View Created Tests
                 </NavLink>
             </li>
         </AuthorizeView>
-        <AuthorizeView Roles="Administrators,Students">
+        <AuthorizeView Roles=",Students">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="/student/entercode">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Enter Code
                 </NavLink>
             </li>
         </AuthorizeView>
-        <AuthorizeView Roles="Administrators,Students">
+        <AuthorizeView Roles="Students">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="/student/viewsubmission">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> View Submissions
                 </NavLink>
             </li>
         </AuthorizeView>
-        <AuthorizeView Roles="Administrators,Teachers">
+        <AuthorizeView Roles="Teachers">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="/student/viewsubmissionteacher">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> View Tests To Mark
+                </NavLink>
+            </li>
+        </AuthorizeView>
+        <AuthorizeView Roles="Administrators">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="/admin/viewsubmission">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> View Submissions
+                </NavLink>
+            </li>
+        </AuthorizeView>
+        <AuthorizeView Roles="Administrators">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="/admin/viewtest">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> View Tests
                 </NavLink>
             </li>
         </AuthorizeView>
