--- a/Client/Pages/Test/InputQuestion.razor
+++ b/Client/Pages/Test/InputQuestion.razor
@@ -34,7 +34,7 @@
     {
 
         <div class="form-check group">
-            <label class="control-label">Question</label>
+            <label class="control-label">Q  @questionList.IndexOf(quest)</label>
             <InputText @bind-Value="@quest.Text" class="form-control" />
             <ValidationMessage For="@(() => quest.Text)" />
             <br />
@@ -71,6 +71,8 @@
     {
         Random code = new Random();
         Exam.ExamId = Guid.NewGuid();
+        //Exam.TeacherId = aState.User.Identity.GetUserId());
+        //Exam.TeacherId = aState.User.Identity.GetUserId());
         Exam.ExamCode = code.Next(1000000, 9999999);
         teachers = await Http.GetFromJsonAsync<List<Teacher>>("/api/Teachers");
         for(int i = 0; i < formLength; i++)
